[package]
name = "telnet_codec"
version = "0.0.0"
authors = ["Joshua Tenner <tenner.joshua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.4"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
bytes = "0.4.12"
